syntax = "proto3";
option go_package = "./pb";

package pb;

import "model_node_group.proto";
import "rpc_messages.proto";

// 节点分组服务
service NodeGroupService {
	// 创建分组
	rpc createNodeGroup (CreateNodeGroupRequest) returns (CreateNodeGroupResponse);

	// 修改分组
	rpc updateNodeGroup (UpdateNodeGroupRequest) returns (RPCSuccess);

	// 删除分组
	rpc deleteNodeGroup (DeleteNodeGroupRequest) returns (RPCSuccess);

	// 查询所有分组
	rpc findAllEnabledNodeGroupsWithClusterId (FindAllEnabledNodeGroupsWithClusterIdRequest) returns (FindAllEnabledNodeGroupsWithClusterIdResponse);

	// 修改分组排序
	rpc updateNodeGroupOrders (UpdateNodeGroupOrdersRequest) returns (RPCSuccess);

	// 查找单个分组信息
	rpc findEnabledNodeGroup (FindEnabledNodeGroupRequest) returns (FindEnabledNodeGroupResponse);
}

// 创建分组
message CreateNodeGroupRequest {
	int64 clusterId = 1;
	string name = 2;
}

message CreateNodeGroupResponse {
	int64 groupId = 1;
}

// 修改分组
message UpdateNodeGroupRequest {
	int64 groupId = 1;
	string name = 2;
}

// 删除分组
message DeleteNodeGroupRequest {
	int64 groupId = 1;
}

// 查询所有分组
message FindAllEnabledNodeGroupsWithClusterIdRequest {
	int64 clusterId = 1;
}

message FindAllEnabledNodeGroupsWithClusterIdResponse {
	repeated NodeGroup groups = 1;
}

// 修改分组排序
message UpdateNodeGroupOrdersRequest {
	repeated int64 groupIds = 1;
}

// 查找单个分组信息
message FindEnabledNodeGroupRequest {
	int64 groupId = 1;
}

message FindEnabledNodeGroupResponse {
	NodeGroup group = 1;
}